upgraded solution
- added generalization (base interface, base service, base controller)
- the solution consists of these packages: models, interfaces, services, controllers, routes, config (for connection to the database)
