# backend/docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /
 definitions:
   models.User:
     properties:
@@ -29,15 +28,12 @@ definitions:
       name:
         type: string
     type: object
-host: localhost:8080
 info:
   contact: {}
-  description: User microservice in Go
-  title: User Service API
-  version: "1.0"
 paths:
   /users:
     get:
+      description: Returns a list of users
       produces:
       - application/json
       responses:
@@ -47,15 +43,21 @@ paths:
             items:
               $ref: '#/definitions/models.User'
             type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
       summary: Get all users
       tags:
       - users
     post:
       consumes:
       - application/json
-      description: Adds a new user to MySQL
+      description: Adds a new user to the database
       parameters:
-      - description: User
+      - description: User data
         in: body
         name: user
         required: true
@@ -68,11 +70,24 @@ paths:
           description: Created
           schema:
             $ref: '#/definitions/models.User'
-      summary: Create new user
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Create a new user
       tags:
       - users
   /users/{id}:
     delete:
+      description: Deletes a user by ID
       parameters:
       - description: User ID
         in: path
@@ -85,7 +100,9 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.User'
+            additionalProperties:
+              type: string
+            type: object
         "400":
           description: Bad Request
           schema:
@@ -98,11 +115,11 @@ paths:
             additionalProperties:
               type: string
             type: object
-      summary: Delete user by ID
+      summary: Delete a user
       tags:
       - users
     get:
-      description: Retrieve a single user by their ID
+      description: Returns a user by its ID
       parameters:
       - description: User ID
         in: path
@@ -134,14 +151,14 @@ paths:
     put:
       consumes:
       - application/json
-      description: Updates a user by ID in MySQL
+      description: Updates a user by ID
       parameters:
       - description: User ID
         in: path
         name: id
         required: true
         type: integer
-      - description: User Update Data
+      - description: Updated user data
         in: body
         name: user
         required: true
@@ -166,7 +183,7 @@ paths:
             additionalProperties:
               type: string
             type: object
-      summary: Update existing user
+      summary: Update a user
       tags:
       - users
 swagger: "2.0"
